bk_ida/gccida/g0/choose_hard_reg_mode
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  choose_hard_reg_mode( unsigned int regno, unsigned int nregs) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1169:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1170:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1171:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modeb; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1172:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modec; // [rsp+14h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1173:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode found_mode; // [rsp+18h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1212:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1212:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1260:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modea] == MODE_COMPLEX_INT || mode_class_0[modea] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1260:54: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modea] == MODE_COMPLEX_INT || mode_class_0[modea] == MODE_COMPLEX_FLOAT ) 
                                                     ^~~~~~~~~~~~
                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1308:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modeb] == MODE_COMPLEX_INT || mode_class_0[modeb] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1308:54: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modeb] == MODE_COMPLEX_INT || mode_class_0[modeb] == MODE_COMPLEX_FLOAT ) 
                                                     ^~~~~~~~~~~~
                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1356:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modec] == MODE_COMPLEX_INT || mode_class_0[modec] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1356:54: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[modec] == MODE_COMPLEX_INT || mode_class_0[modec] == MODE_COMPLEX_FLOAT ) 
                                                     ^~~~~~~~~~~~
                                                     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1404:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[m] == MODE_COMPLEX_INT || mode_class_0[m] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1404:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[m] == MODE_COMPLEX_INT || mode_class_0[m] == MODE_COMPLEX_FLOAT ) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/regclass.c:1412:56: error: use of undeclared identifier 'machine_mode'
if ( v19 == nregs && ix86_hard_regno_mode_ok( regno, ( machine_mode)m) ) 
                                                       ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/choose_hard_reg_mode/src/obj/regclass.o] Error 1
